# fastapi-example

./: Dockerfile  README.md  alembic.ini  app.sh  docker-compose.yml  pyproject.toml  rename_this_to_env.py  requirements.txt
alembic/: env.py
alembic/versions/: 2023_11_16_1406-eeca4dd2ad5f_init.py  2023_11_17_1727-4cb92327b6f0_entities_and_tags.py  2023_11_18_1304-57e93b06ec30_refactor.py  2023_11_20_1235-86cd45411186_init.py
src/: abstarct_repo.py  database.py  global_config.py  global_dependencies.py  main.py  relationship_models.py
src/auth/: auth.py  models.py  schemas.py  utils.py
src/entity/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/tag/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py
