[tool.poetry]
name = "entitystore"
version = "0.1.0"
description = ""
authors = ["LM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
