[tool.poetry]
name = "entitystore"
version = "0.1.0"
description = ""
authors = ["LM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
